--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -6,8 +6,7 @@
   "background_color": "#0b1220",
   "theme_color": "#0f766e",
   "icons": [
-    { "src": "/icons/icon-192.jpg", "sizes": "192x192", "type": "image/jpeg" },
-    { "src": "/icons/icon-512.jpg", "sizes": "512x512", "type": "image/jpeg" }
+    { "src": "/icon-192.jpg", "sizes": "192x192", "type": "image/jpeg" }
   ]
 }
 
