--- a/.github/workflows/father-assignment.yml
+++ b/.github/workflows/father-assignment.yml
@@ -16,7 +16,33 @@ jobs:
         ADMIN_SECRET: ${{ secrets.ADMIN_SECRET }}
         GESTATION_DAYS: ${{ secrets.GESTATION_DAYS || '300' }}
       run: |
-        curl -X POST \
+        echo "🐄 Daily Father Assignment - $(date)"
+        echo "====================================="
+        
+        # Run the father assignment process
+        RESPONSE=$(curl -s -X POST \
           -H "X-Admin-Secret: $ADMIN_SECRET" \
           -H "Content-Type: application/json" \
-          "$API_BASE_URL/father-assignment/process?dry_run=false&gestation_days=$GESTATION_DAYS"
+          "$API_BASE_URL/father-assignment/process?dry_run=false&gestation_days=$GESTATION_DAYS")
+        
+        # Extract and display key results
+        TOTAL=$(echo "$RESPONSE" | grep -o '"total_processed":[0-9]*' | cut -d':' -f2)
+        ASSIGNED=$(echo "$RESPONSE" | grep -o '"assigned":[0-9]*' | cut -d':' -f2)
+        REPASO=$(echo "$RESPONSE" | grep -o '"repaso":[0-9]*' | cut -d':' -f2)
+        NO_INSEMINATION=$(echo "$RESPONSE" | grep -o '"no_insemination":[0-9]*' | cut -d':' -f2)
+        ERRORS=$(echo "$RESPONSE" | grep -o '"errors":[0-9]*' | cut -d':' -f2)
+        
+        echo "📊 Results:"
+        echo "  Processed: $TOTAL"
+        echo "  Assigned: $ASSIGNED"
+        echo "  REPASO: $REPASO"
+        echo "  No Data: $NO_INSEMINATION"
+        echo "  Errors: $ERRORS"
+        
+        if [ "$ASSIGNED" -gt 0 ]; then
+          echo "✅ Successfully assigned $ASSIGNED father IDs!"
+        elif [ "$NO_INSEMINATION" -gt 0 ]; then
+          echo "ℹ️  No insemination data found for $NO_INSEMINATION registrations"
+        else
+          echo "ℹ️  No registrations needed processing"
+        fi
