--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "0.1.1"
+version = "0.1.0"
 version_files = ["pyproject.toml:tool.poetry.version"]
+tag_format = "{version}"
