--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "LiveStock",
-  "short_name": "LiveStock",
+  "name": "TAG",
+  "short_name": "TAG",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0b1220",
   "theme_color": "#0f766e",
   "icons": [
-    { "src": "/icon-192.jpg", "sizes": "192x192", "type": "image/jpeg" }
+    { "src": "/logo.jpg", "sizes": "192x192", "type": "image/jpeg" }
   ]
 }
 
