--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ google-cloud-storage = ">=3.4.1,<4.0.0"
 pandas = "^2.3.3"
 openpyxl = "^3.1.5"
 python-multipart = "^0.0.20"
+langchain-google-genai = "^3.0.1"
+langchain = "^1.0.3"
+langgraph = "^1.0.2"
 
 [tool.poetry.group.dev.dependencies]
 commitizen = "^4.9.1"
