--- a/backend_py/requirements.txt
+++ b/backend_py/requirements.txt
@@ -3,4 +3,7 @@ uvicorn[standard]==0.30.6
 firebase-admin==6.5.0
 pandas==2.0.3
 openpyxl==3.1.2
+asyncpg>=0.29.0
+psycopg2-binary>=2.9.9
+httpx>=0.25.0
 
