--- a/react-redesign/package.json
+++ b/react-redesign/package.json
@@ -29,7 +29,8 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
-    "vite": "^7.1.12"
+    "vite": "^7.1.12",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "scripts": {
     "dev": "vite",
