--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
 react-redesign/node_modules/
 react-redesign/dist/
+.DS_Store
+.env
+DATABASE_SCHEMA.md
+EVENT_SOURCING_INTEGRATION.md
+MIGRATION_GUIDE.md
+backend_py/__pycache__/
+backend_py/backend.log
+backend_py/backup/__pycache__/
+backend_py/data/
+backend_py/events/__pycache__/
+backend_py/migrations/
+backend_py/routes/__pycache__/
+backend_py/routes/registrations_multi_tenant_example.py
+backend_py/services/__pycache__/
+chatbot/__pycache__/
+chatbot/requirements.txt
+data/
+farm.db
+frontend/.DS_Store
+main.py
+migrate_legacy_data.py
+notebooks/
+notes.txt
+setup_postgres.py
+test-llm.py
+test_rls_policies.py
+upload_births.py
